--- a/YogaKit/YogaKitSample/Podfile
+++ b/YogaKit/YogaKitSample/Podfile
@@ -4,6 +4,7 @@ use_frameworks!
 target 'YogaKitSample' do
     platform :ios, '9.0'
     pod 'Yoga', :path => '../../Yoga.podspec'
+    pod 'YGLayoutExtensions', :path => '../../YGLayoutExtensions.podspec'
     pod 'SwiftYogaKit', :path => '../../SwiftYogaKit.podspec'
     pod 'IGListKit', '~> 4.0.0'
 end
@@ -17,5 +18,6 @@ end
 target 'YogaKitOSXSample' do
     platform :osx, '10.10'
     pod 'Yoga', :path => '../../Yoga.podspec'
+    pod 'YGLayoutExtensions', :path => '../../YGLayoutExtensions.podspec'
     pod 'SwiftYogaKit', :path => '../../SwiftYogaKit.podspec'
 end
