--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,3 +54,11 @@ jobs:
           echo "::set-env name=ANDROID_NDK_HOME::$ANDROID_NDK_REPOSITORY/android-ndk-r15c"
       - name: Build
         run: ./gradlew testDebugUnit && scripts/publish-snapshot.sh
+  ios:
+    runs-on: macOS-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Test on iPhone 11
+        run: xcodebuild -project 'YogaKit.xcodeproj' -scheme 'YogaKit' -configuration Debug -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 11' clean test
+      - name: Test on iPhone 11 Pro Max
+        run: xcodebuild -project 'YogaKit.xcodeproj' -scheme 'YogaKit' -configuration Debug -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 11 Pro Max' clean test
