Squashed commit of the following:
commit 578d197dd6652225b46af090c0b46471dc887361
Author: Lauren Bentley <lebentle@fb.com>
Date:   Fri Jun 18 12:19:40 2021 -0700

    remove .buckversion files from fbsource/xplat

    Summary: Buck has not relied on the .buckversion file for a while now. I am trying to clean up the number of configs at the root of the cell for buck. This diff attempts to remove .buckversion code referecnes from fbsource/xplat Instead of calling cat .buckversion to get the buckversion hash, you can call buck --fast-version which parses the buck-java11 file without downloading buck. Alternatively, you can also do something like cat .buck-java11 | grep -o -E -e "[0-9a-f]{40}" | head -1  to get the buckversion hash.

    Reviewed By: stepancheg

    Differential Revision: D28579639

    fbshipit-source-id: 6231e16df41f3e403098576e4bfd5d5a2fd38a14

commit e5acf77eea7ddb39e32c53dbdc407d6b93cea17c
Author: Amir Shalem <amirshalem@fb.com>
Date:   Thu Jun 3 07:02:49 2021 -0700

    Don't allocate large arrays on stack when copying native pointers, use heap based array

    Summary:
    Don't allocate large arrays on stack when copying native pointers, use heap based array.

    Today the code copies the native pointers on the stack, since it may be too big, lets make sure to use heap based allocating using std::vector.

    This array is afterwards converted into a reversed map from index to pointer, so it is heap based anyhow.

    Changelog: [Internal] Don't allocate large arrays on stack when copying native pointers, use heap based array

    Reviewed By: Andrey-Mishanin

    Differential Revision: D28747213

    fbshipit-source-id: da69b4b2d0960fdade9f07f44654b30d6dacc43a

commit f03129728f591b311fbf99615f9e75b8c4e068f9
Author: Pascal Hartig <realpassy@fb.com>
Date:   Sun May 23 11:37:42 2021 -0700

    Disable snapshot publishing (#1089)

    Summary:
    Currently broken. Will reenable this separately.

    Pull Request resolved: https://github.com/face

--- a/java/proguard-annotations/build.gradle
+++ b/java/proguard-annotations/build.gradle
@@ -10,4 +10,4 @@ apply plugin: 'java'
 sourceCompatibility = '1.7'
 targetCompatibility = '1.7'
 
-apply from: rootProject.file('gradle/release.gradle')
+apply plugin: 'com.vanniktech.maven.publish'
