[SwiftYogaKit] Rename SwiftYogaKit to YogaKit.Swift

--- a/YogaKit/YogaKitSample/Podfile
+++ b/YogaKit/YogaKitSample/Podfile
@@ -4,7 +4,7 @@ use_frameworks!
 target 'YogaKitSample' do
     platform :ios, '9.0'
     pod 'Yoga', :path => '../../Yoga.podspec'
-    pod 'SwiftYogaKit', :path => '../../SwiftYogaKit.podspec'
+    pod 'YogaKit.Swift', :path => '../../YogaKit.Swift.podspec'
     pod 'IGListKit', '~> 4.0.0'
 end
 
@@ -17,5 +17,5 @@ end
 target 'YogaKitOSXSample' do
     platform :osx, '10.10'
     pod 'Yoga', :path => '../../Yoga.podspec'
-    pod 'SwiftYogaKit', :path => '../../SwiftYogaKit.podspec'
+    pod 'YogaKit.Swift', :path => '../../YogaKit.Swift.podspec'
 end
