--- a/YogaKit/YogaKit.xcodeproj/xcshareddata/xcschemes/YogaKit.Swift.xcscheme
+++ b/YogaKit/YogaKit.xcodeproj/xcshareddata/xcschemes/YogaKit.Swift.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1200"
+   LastUpgradeVersion = "1250"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "1511C052251EBED100A2C621"
-               BuildableName = "SwiftYogaKit.framework"
-               BlueprintName = "SwiftYogaKit"
+               BuildableName = "YogaKit_Swift.framework"
+               BlueprintName = "YogaKit.Swift"
                ReferencedContainer = "container:YogaKit.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -51,8 +51,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "1511C052251EBED100A2C621"
-            BuildableName = "SwiftYogaKit.framework"
-            BlueprintName = "SwiftYogaKit"
+            BuildableName = "YogaKit_Swift.framework"
+            BlueprintName = "YogaKit.Swift"
             ReferencedContainer = "container:YogaKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
