--- a/YogaKit/YogaKit.xcodeproj/xcshareddata/xcschemes/YogaKit.Swift.xcscheme
+++ b/YogaKit/YogaKit.xcodeproj/xcshareddata/xcschemes/YogaKit.Swift.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "1511C052251EBED100A2C621"
-               BuildableName = "YogaKit_Swift.framework"
+               BuildableName = "YogaKitSwift.framework"
                BlueprintName = "YogaKit.Swift"
                ReferencedContainer = "container:YogaKit.xcodeproj">
             </BuildableReference>
@@ -51,7 +51,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "1511C052251EBED100A2C621"
-            BuildableName = "YogaKit_Swift.framework"
+            BuildableName = "YogaKitSwift.framework"
             BlueprintName = "YogaKit.Swift"
             ReferencedContainer = "container:YogaKit.xcodeproj">
          </BuildableReference>
